<resources>

    <string name="app_name">Versión 0 de la App</string>
    <string name="edit_message">Escribe algo!</string>
    <string name="menu_settings">Configuración </string>
    <string name="title_activity_principal">Principal</string>
    <string name="pagina_principal_">Pagina Principal!</string>
    <string name="boton_feedback">Da tu Feedback!</string>
    <string name="horario">Horario</string>
    <string name="calificaciones">Calificaciones</string>
    <string name="configuraci_n_de_ramos">Configuración de Ramos</string>
    <string name="button_send">Envíalo!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_actividad_que_muestra_mensaje">ActividadQueMuestraMensaje</string>
    <string name="boton_configurar">Configura tus Ramos</string>
    <string name="boton_horario">Revisa tu Horario</string>
    <string name="boton_notas">Revisa tus Notas</string>
    <string name="title_activity_actividad_configuracion">ActividadConfiguracion</string>
    <string name="title_activity_actividad_horario">ActividadHorario</string>
    <string name="title_activity_actividad_notas">ActividadNotas</string>
    <string name="nombre_ramo">Nombre Ramo</string>
    <string name="nombre_ramo_con_otro_nombre">Nombre Ramo con otro Nombre</string>
    <string name="title_activity_datos_del_ramo">DatosDelRamo</string>
    <string name="title_activity_actividad_datos_del_ramo">ActividadDatosDelRamo</string>
    <string name="title_activity_actividad_ramos">ActividadRamos</string>
    <string name="title_activity_nota_nombre_ramo">NotaNombreRamo</string>
    <string name="edittextNombredelRamo">Nombre del Ramo</string>
    <string name="title_activity_dialogo">Dialogo</string>
    <string name="title_activity_actividad_ramos2">ActividadRamos2</string>
    <string name="title_activity_actividad_notas2">ActividadNotas2</string>
    <string name="title_activity_actividad_feedback">ActividadFeedback</string>
    <string name="title_activity_actividad_edicion_ramo">ActividadEdicionRamo</string>
    <string name="title_activity_actividad_suscribir_curso">MainActivity</string>

</resources>